[package]
name = "qpackt-backend"
version = "0.1.0"
edition = "2021"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
license = "AGPL-3.0"


[dependencies]
acme-lib = "0.9"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = { version = "4", features = ["rustls-0_21"] }
arc-swap = "1"
awc = "3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
rand = "0.8.5"
scrypt = "0.11"
serde_json = "1"
serde = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
yaml-rust = "0.4"
zip = "0.6"
rustls = "0.21.10"
futures-util = "0.3.30"

[dev-dependencies]
tmpdir = "1.0"
reqwest = { version = "0.11", features = ["json"] }