[package]
name = "vaden-backend"
version = "0.1.0"
edition = "2021"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4"
scrypt = "0.11"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
yaml-rust = "0.4"