[package]
name = "vaden-backend"
version = "0.1.0"
edition = "2021"
authors = ["Łukasz Wojtów <lukasz.wojtow@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
actix-files = "0.6"
actix-web = "4"
awc = "3"
futures-util = "0.3"
scrypt = "0.11"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
url = "2"
yaml-rust = "0.4"